added cells to load 'Reuters-21578' dataset and organize into pandas df

--- a/Text_Preprocessing.ipynb
+++ b/Text_Preprocessing.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -182,84 +182,33 @@
        "      <td>[palm-oil, veg-oil]</td>\n",
        "      <td>INDONESIA SEES CPO PRICE RISING SHARPLY\\n  Ind...</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10783</th>\n",
-       "      <td>training/999</td>\n",
-       "      <td>[interest, money-fx]</td>\n",
-       "      <td>U.K. MONEY MARKET SHORTAGE FORECAST REVISED DO...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10784</th>\n",
-       "      <td>training/9992</td>\n",
-       "      <td>[earn]</td>\n",
-       "      <td>KNIGHT-RIDDER INC &amp;lt;KRN&gt; SETS QUARTERLY\\n  Q...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10785</th>\n",
-       "      <td>training/9993</td>\n",
-       "      <td>[earn]</td>\n",
-       "      <td>TECHNITROL INC &amp;lt;TNL&gt; SETS QUARTERLY\\n  Qtly...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10786</th>\n",
-       "      <td>training/9994</td>\n",
-       "      <td>[earn]</td>\n",
-       "      <td>NATIONWIDE CELLULAR SERVICE INC &amp;lt;NCEL&gt; 4TH ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10787</th>\n",
-       "      <td>training/9995</td>\n",
-       "      <td>[earn]</td>\n",
-       "      <td>&amp;lt;A.H.A. AUTOMOTIVE TECHNOLOGIES CORP&gt; YEAR ...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10788 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 ids                                      categories  \\\n",
-       "0         test/14826                                         [trade]   \n",
-       "1         test/14828                                         [grain]   \n",
-       "2         test/14829                                [crude, nat-gas]   \n",
-       "3         test/14832  [corn, grain, rice, rubber, sugar, tin, trade]   \n",
-       "4         test/14833                             [palm-oil, veg-oil]   \n",
-       "...              ...                                             ...   \n",
-       "10783   training/999                            [interest, money-fx]   \n",
-       "10784  training/9992                                          [earn]   \n",
-       "10785  training/9993                                          [earn]   \n",
-       "10786  training/9994                                          [earn]   \n",
-       "10787  training/9995                                          [earn]   \n",
+       "          ids                                      categories  \\\n",
+       "0  test/14826                                         [trade]   \n",
+       "1  test/14828                                         [grain]   \n",
+       "2  test/14829                                [crude, nat-gas]   \n",
+       "3  test/14832  [corn, grain, rice, rubber, sugar, tin, trade]   \n",
+       "4  test/14833                             [palm-oil, veg-oil]   \n",
        "\n",
-       "                                                    text  \n",
-       "0      ASIAN EXPORTERS FEAR DAMAGE FROM U.S.-JAPAN RI...  \n",
-       "1      CHINA DAILY SAYS VERMIN EAT 7-12 PCT GRAIN STO...  \n",
-       "2      JAPAN TO REVISE LONG-TERM ENERGY DEMAND DOWNWA...  \n",
-       "3      THAI TRADE DEFICIT WIDENS IN FIRST QUARTER\\n  ...  \n",
-       "4      INDONESIA SEES CPO PRICE RISING SHARPLY\\n  Ind...  \n",
-       "...                                                  ...  \n",
-       "10783  U.K. MONEY MARKET SHORTAGE FORECAST REVISED DO...  \n",
-       "10784  KNIGHT-RIDDER INC &lt;KRN> SETS QUARTERLY\\n  Q...  \n",
-       "10785  TECHNITROL INC &lt;TNL> SETS QUARTERLY\\n  Qtly...  \n",
-       "10786  NATIONWIDE CELLULAR SERVICE INC &lt;NCEL> 4TH ...  \n",
-       "10787  &lt;A.H.A. AUTOMOTIVE TECHNOLOGIES CORP> YEAR ...  \n",
-       "\n",
-       "[10788 rows x 3 columns]"
+       "                                                text  \n",
+       "0  ASIAN EXPORTERS FEAR DAMAGE FROM U.S.-JAPAN RI...  \n",
+       "1  CHINA DAILY SAYS VERMIN EAT 7-12 PCT GRAIN STO...  \n",
+       "2  JAPAN TO REVISE LONG-TERM ENERGY DEMAND DOWNWA...  \n",
+       "3  THAI TRADE DEFICIT WIDENS IN FIRST QUARTER\\n  ...  \n",
+       "4  INDONESIA SEES CPO PRICE RISING SHARPLY\\n  Ind...  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reutersDf"
+    "reutersDf.head()"
    ]
   }
  ],
