--- a/Text_Preprocessing.ipynb
+++ b/Text_Preprocessing.ipynb
@@ -31,11 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.io import arff\n",
+    "import re\n",
+    "import string\n",
     "import numpy as np\n",
     "import json\n",
     "import pandas as pd\n",
@@ -43,6 +45,13 @@
     "import sklearn_json as skljson\n",
     "from sklearn.model_selection import train_test_split\n",
     "from nltk.corpus import reuters    ## This downloads the reduced Reuters-21578 dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading the Reuters-21578 Dataset"
    ]
   },
   {
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,12 +126,12 @@
     "    text.append(reuters.raw(file))\n",
     "\n",
     "# Combine lists into pandas dataframe. reutersDf is the final dataframe. \n",
-    "reutersDf = pd.DataFrame({'ids':fileids, 'categories':categories, 'text':text})"
+    "reutersDF = pd.DataFrame({'ids':fileids, 'categories':categories, 'text':text})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -202,13 +211,205 @@
        "4  INDONESIA SEES CPO PRICE RISING SHARPLY\\n  Ind...  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reutersDf.head()"
+    "reutersDF.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Check if there are any urls in articles\n",
+    "pattern = re.compile(r\"https?://(\\S+|www)\\.\\S+\")\n",
+    "for t in reutersDF.text:\n",
+    "    matches = pattern.findall(t)\n",
+    "    for match in matches:\n",
+    "        print(t)\n",
+    "        print(match)\n",
+    "        print(pattern.sub(r\"\", t))\n",
+    "    if len(matches) > 0:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Define a function to remove punctuation from documents\n",
+    "def remove_punct(text):\n",
+    "    translator = str.maketrans(\"\", \"\", string.punctuation)\n",
+    "    return text.translate(translator)\n",
+    "\n",
+    "string.punctuation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Remove punctuation from documents\n",
+    "reutersDF[\"text\"] = reutersDF.text.apply(remove_punct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ASIAN EXPORTERS FEAR DAMAGE FROM USJAPAN RIFT\\n  Mounting trade friction between the\\n  US And Japan has raised fears among many of Asias exporting\\n  nations that the row could inflict farreaching economic\\n  damage businessmen and officials said\\n      They told Reuter correspondents in Asian capitals a US\\n  Move against Japan might boost protectionist sentiment in the\\n  US And lead to curbs on American imports of their products\\n      But some exporters said that while the conflict would hurt\\n  them in the longrun in the shortterm Tokyos loss might be\\n  their gain\\n      The US Has said it will impose 300 mln dlrs of tariffs on\\n  imports of Japanese electronics goods on April 17 in\\n  retaliation for Japans alleged failure to stick to a pact not\\n  to sell semiconductors on world markets at below cost\\n      Unofficial Japanese estimates put the impact of the tariffs\\n  at 10 billion dlrs and spokesmen for major electronics firms\\n  said they would virtually halt exports of products hit by the\\n  new taxes\\n      We wouldnt be able to do business said a spokesman for\\n  leading Japanese electronics firm Matsushita Electric\\n  Industrial Co Ltd ltMCT\\n      If the tariffs remain in place for any length of time\\n  beyond a few months it will mean the complete erosion of\\n  exports of goods subject to tariffs to the US said Tom\\n  Murtha a stock analyst at the Tokyo office of broker ltJames\\n  Capel and Co\\n      In Taiwan businessmen and officials are also worried\\n      We are aware of the seriousness of the US Threat against\\n  Japan because it serves as a warning to us said a senior\\n  Taiwanese trade official who asked not to be named\\n      Taiwan had a trade trade surplus of 156 billion dlrs last\\n  year 95 pct of it with the US\\n      The surplus helped swell Taiwans foreign exchange reserves\\n  to 53 billion dlrs among the worlds largest\\n      We must quickly open our markets remove trade barriers and\\n  cut import tariffs to allow imports of US Products if we\\n  want to defuse problems from possible US Retaliation said\\n  Paul Sheen chairman of textile exporters ltTaiwan Safe Group\\n      A senior official of South Koreas trade promotion\\n  association said the trade dispute between the US And Japan\\n  might also lead to pressure on South Korea whose chief exports\\n  are similar to those of Japan\\n      Last year South Korea had a trade surplus of 71 billion\\n  dlrs with the US Up from 49 billion dlrs in 1985\\n      In Malaysia trade officers and businessmen said tough\\n  curbs against Japan might allow hardhit producers of\\n  semiconductors in third countries to expand their sales to the\\n  US\\n      In Hong Kong where newspapers have alleged Japan has been\\n  selling belowcost semiconductors some electronics\\n  manufacturers share that view But other businessmen said such\\n  a shortterm commercial advantage would be outweighed by\\n  further US Pressure to block imports\\n      That is a very shortterm view said Lawrence Mills\\n  directorgeneral of the Federation of Hong Kong Industry\\n      If the whole purpose is to prevent imports one day it will\\n  be extended to other sources Much more serious for Hong Kong\\n  is the disadvantage of action restraining trade he said\\n      The US Last year was Hong Kongs biggest export market\\n  accounting for over 30 pct of domestically produced exports\\n      The Australian government is awaiting the outcome of trade\\n  talks between the US And Japan with interest and concern\\n  Industry Minister John Button said in Canberra last Friday\\n      This kind of deterioration in trade relations between two\\n  countries which are major trading partners of ours is a very\\n  serious matter Button said\\n      He said Australias concerns centred on coal and beef\\n  Australias two largest exports to Japan and also significant\\n  US Exports to that country\\n      Meanwhile USJapanese diplomatic manoeuvres to solve the\\n  trade standoff continue\\n      Japans ruling Liberal Democratic Party yesterday outlined\\n  a package of economic measures to boost the Japanese economy\\n      The measures proposed include a large supplementary budget\\n  and record public works spending in the first half of the\\n  financial year\\n      They also call for steppedup spending as an emergency\\n  measure to stimulate the economy despite Prime Minister\\n  Yasuhiro Nakasones avowed fiscal reform program\\n      Deputy US Trade Representative Michael Smith and Makoto\\n  Kuroda Japans deputy minister of International Trade and\\n  Industry MITI are due to meet in Washington this week in an\\n  effort to end the dispute\\n  \\n\\n'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reutersDF.text[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ids</th>\n",
+       "      <th>categories</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3019</th>\n",
+       "      <td>training/1</td>\n",
+       "      <td>[cocoa]</td>\n",
+       "      <td>BAHIA COCOA REVIEW\\n  Showers continued throug...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3020</th>\n",
+       "      <td>training/10</td>\n",
+       "      <td>[acq]</td>\n",
+       "      <td>COMPUTER TERMINAL SYSTEMS &amp;lt;CPML&gt; COMPLETES ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3021</th>\n",
+       "      <td>training/100</td>\n",
+       "      <td>[money-supply]</td>\n",
+       "      <td>N.Z. TRADING BANK DEPOSIT GROWTH RISES SLIGHTL...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3022</th>\n",
+       "      <td>training/1000</td>\n",
+       "      <td>[acq]</td>\n",
+       "      <td>NATIONAL AMUSEMENTS AGAIN UPS VIACOM &amp;lt;VIA&gt; ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3023</th>\n",
+       "      <td>training/10000</td>\n",
+       "      <td>[earn]</td>\n",
+       "      <td>ROGERS &amp;lt;ROG&gt; SEES 1ST QTR NET UP SIGNIFICAN...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 ids      categories  \\\n",
+       "3019      training/1         [cocoa]   \n",
+       "3020     training/10           [acq]   \n",
+       "3021    training/100  [money-supply]   \n",
+       "3022   training/1000           [acq]   \n",
+       "3023  training/10000          [earn]   \n",
+       "\n",
+       "                                                   text  \n",
+       "3019  BAHIA COCOA REVIEW\\n  Showers continued throug...  \n",
+       "3020  COMPUTER TERMINAL SYSTEMS &lt;CPML> COMPLETES ...  \n",
+       "3021  N.Z. TRADING BANK DEPOSIT GROWTH RISES SLIGHTL...  \n",
+       "3022  NATIONAL AMUSEMENTS AGAIN UPS VIACOM &lt;VIA> ...  \n",
+       "3023  ROGERS &lt;ROG> SEES 1ST QTR NET UP SIGNIFICAN...  "
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Split the data into train and test sets\n",
+    "training_indices = [index for index in reutersDF.index if 'training' in reutersDF.loc[index,].ids]\n",
+    "test_indices = [index for index in reutersDF.index if 'test' in reutersDF.loc[index,].ids]\n",
+    "\n",
+    "reuters_training = reutersDF.loc[training_indices,]\n",
+    "reuters_test = reutersDF.loc[test_indices]\n",
+    "\n",
+    "reuters_training.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generating TF-IDF Featuer Vectors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generating Sequence of Integers Feature Vectors (for RNNs)"
    ]
   }
  ],
