started sequence of integers preprocessing

--- a/Text_Preprocessing.ipynb
+++ b/Text_Preprocessing.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,7 @@
     "import numpy as np\n",
     "import json\n",
     "import pandas as pd\n",
+    "from collections import Counter\n",
     "from bpmll import bp_mll_loss\n",
     "import sklearn_json as skljson\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -589,13 +590,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "## (CAUTION: DO NOT OVERWRITE EXISTING FILES) -- Write the training and test data to a .npz file\n",
     "outfile = \"tfidf_trainTest_data.npz\"\n",
-    "#np.savez(outfile, X_tfidfTrain = X_tfidfTrain, \n",
+    "#np.savez_compressed(outfile, X_tfidfTrain = X_tfidfTrain, \n",
     "#                  X_tfidfTest = X_tfidfTest, \n",
     "#                  Y_tfidfTrain = Y_tfidfTrain, \n",
     "#                  Y_tfidfTest = Y_tfidfTest)"
@@ -610,96 +611,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ids</th>\n",
-       "      <th>categories</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3019</th>\n",
-       "      <td>training/1</td>\n",
-       "      <td>[cocoa]</td>\n",
-       "      <td>bahia cocoa review showers continued throughou...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3020</th>\n",
-       "      <td>training/10</td>\n",
-       "      <td>[acq]</td>\n",
-       "      <td>computer terminal systems ltcpml completes sal...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3021</th>\n",
-       "      <td>training/100</td>\n",
-       "      <td>[money-supply]</td>\n",
-       "      <td>nz trading bank deposit growth rises slightly ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3022</th>\n",
-       "      <td>training/1000</td>\n",
-       "      <td>[acq]</td>\n",
-       "      <td>national amusements ups viacom ltvia bid viaco...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3023</th>\n",
-       "      <td>training/10000</td>\n",
-       "      <td>[earn]</td>\n",
-       "      <td>rogers ltrog sees 1st qtr net significantly ro...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 ids      categories  \\\n",
-       "3019      training/1         [cocoa]   \n",
-       "3020     training/10           [acq]   \n",
-       "3021    training/100  [money-supply]   \n",
-       "3022   training/1000           [acq]   \n",
-       "3023  training/10000          [earn]   \n",
-       "\n",
-       "                                                   text  \n",
-       "3019  bahia cocoa review showers continued throughou...  \n",
-       "3020  computer terminal systems ltcpml completes sal...  \n",
-       "3021  nz trading bank deposit growth rises slightly ...  \n",
-       "3022  national amusements ups viacom ltvia bid viaco...  \n",
-       "3023  rogers ltrog sees 1st qtr net significantly ro...  "
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('said', 25376), ('mln', 18598), ('vs', 14340), ('dlrs', 12326), ('pct', 9771)]\n",
+      "51028\n"
+     ]
     }
    ],
    "source": [
-    "reuters_training = reutersDF.loc[training_indices,]\n",
-    "reuters_test = reutersDF.loc[test_indices]\n",
+    "# Count unique words\n",
+    "def counter_word(text_col):\n",
+    "    count = Counter()\n",
+    "    for text in text_col.values:\n",
+    "        for word in text.split():\n",
+    "            count[word] += 1\n",
+    "    return count\n",
     "\n",
-    "reuters_training.head()"
+    "counter = counter_word(reutersDF.text)\n",
+    "num_unique_words = len(counter)\n",
+    "print(counter.most_common(5))\n",
+    "print(num_unique_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_seq = reutersDF.text.to_numpy()"
    ]
   }
  ],
