added sequence of integers preprocessing

--- a/Text_Preprocessing.ipynb
+++ b/Text_Preprocessing.ipynb
@@ -31,11 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.io import arff\n",
+    "import random\n",
     "import os\n",
     "import re\n",
     "import string\n",
@@ -46,11 +47,13 @@
     "from bpmll import bp_mll_loss\n",
     "import sklearn_json as skljson\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MultiLabelBinarizer\n",
     "from nltk.corpus import reuters    ## This downloads the reduced Reuters-21578 dataset\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.preprocessing import MultiLabelBinarizer"
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences"
    ]
   },
   {
@@ -611,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -640,11 +643,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_seq = reutersDF.text.to_numpy()"
+    "## Convert text column to numpy array and train/test split\n",
+    "X_seq = reutersDF.text.to_numpy()\n",
+    "X_seqTrain = X_seq[training_indices, ]\n",
+    "X_seqTest = X_seq[test_indices, ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bahia cocoa review showers continued throughout week bahia cocoa zone alleviating drought since early january improving prospects coming temporao although normal humidity levels restored comissaria smith said weekly review dry period means temporao late year arrivals week ended february 22 155221 bags 60 kilos making cumulative total season 593 mln 581 stage last year seems cocoa delivered earlier consignment included arrivals figures comissaria smith said still doubt much old crop cocoa still available harvesting practically come end total bahia crop estimates around 64 mln bags sales standing almost 62 mln hundred thousand bags still hands farmers middlemen exporters processors doubts much cocoa would fit export shippers experiencing dificulties obtaining bahia superior certificates view lower quality recent weeks farmers sold good part cocoa held consignment comissaria smith said spot bean prices rose 340 350 cruzados per arroba 15 kilos bean shippers reluctant offer nearby shipment limited sales booked march shipment 1750 1780 dlrs per tonne ports named new crop sales also light open ports junejuly going 1850 1880 dlrs 35 45 dlrs new york july augsept 1870 1875 1880 dlrs per tonne fob routine sales butter made marchapril sold 4340 4345 4350 dlrs aprilmay butter went 227 times new york may junejuly 4400 4415 dlrs augsept 4351 4450 dlrs 227 228 times new york sept octdec 4480 dlrs 227 times new york dec comissaria smith said destinations us covertible currency areas uruguay open ports cake sales registered 785 995 dlrs marchapril 785 dlrs may 753 dlrs aug 039 times new york dec octdec buyers us argentina uruguay convertible currency areas liquor sales limited marchapril selling 2325 2380 dlrs junejuly 2375 dlrs 125 times new york july augsept 2400 dlrs 125 times new york sept octdec 125 times new york dec comissaria smith said total bahia sales currently estimated 613 mln bags 198687 crop 106 mln bags 198788 crop final figures period february 28 expected published brazilian cocoa trade commission carnival ends midday february 27\n",
+      "[5585, 398, 739, 5586, 582, 1959, 59, 5585, 398, 1901, 20908, 1390, 158, 259, 39, 2212, 873, 1217, 3799, 499, 926, 8081, 308, 4086, 9026, 1636, 1, 1044, 739, 1653, 180, 914, 3799, 416, 7, 5278, 59, 188, 38, 306, 20909, 955, 545, 2295, 447, 1352, 76, 627, 4596, 2, 7377, 1611, 18, 7, 2249, 398, 2590, 92, 10197, 639, 5278, 198, 9026, 1636, 1, 226, 2894, 305, 1673, 353, 398, 226, 513, 3438, 10198, 588, 131, 76, 5585, 353, 618, 146, 1141, 2, 955, 35, 5927, 922, 1587, 2, 4795, 4796, 955, 226, 1837, 454, 14957, 611, 2537, 4237, 305, 398, 12, 3930, 94, 7378, 9027, 20910, 3800, 5585, 4797, 758, 1078, 136, 1438, 246, 317, 454, 251, 445, 272, 398, 326, 10197, 9026, 1636, 1, 1187, 4238, 34, 57, 3146, 1374, 6341, 37, 20911, 78, 2295, 4238, 7378, 3658, 49, 2213, 796, 776, 35, 3554, 32, 796, 2712, 12041, 4, 37, 543, 1449, 1353, 25, 353, 35, 28, 1045, 429, 1449, 10199, 784, 5928, 10200, 4, 441, 544, 4, 25, 334, 552, 9028, 14958, 9029, 10200, 4, 37, 543, 2031, 4597, 35, 4598, 122, 6806, 251, 20912, 14959, 12042, 4, 5279, 4598, 1736, 3339, 970, 25, 334, 43, 10199, 9030, 14960, 4, 9028, 20913, 14961, 4, 3339, 2649, 970, 25, 334, 3931, 6342, 20914, 4, 3339, 970, 25, 334, 729, 9026, 1636, 1, 2214, 10, 20915, 166, 525, 2296, 429, 1449, 6343, 35, 1510, 9031, 9032, 4, 6806, 9031, 4, 43, 5587, 4, 6807, 14962, 970, 25, 334, 729, 6342, 1354, 10, 2372, 2296, 1031, 166, 525, 10201, 35, 776, 6806, 559, 20916, 20917, 4, 10199, 20918, 4, 792, 970, 25, 334, 552, 9028, 5588, 4, 792, 970, 25, 334, 3931, 6342, 792, 970, 25, 334, 729, 9026, 1636, 1, 76, 5585, 35, 479, 239, 12043, 2, 955, 414, 353, 1755, 2, 955, 777, 353, 424, 198, 180, 38, 213, 64, 1902, 730, 398, 19, 189, 8082, 1142, 3439, 38, 371]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Tokenize and vectorize, turning each text into a sequence of integers\n",
+    "random.seed(123)\n",
+    "\n",
+    "tokenizer = Tokenizer(num_words = num_unique_words)\n",
+    "tokenizer.fit_on_texts(X_seqTrain)    # Fit only to training\n",
+    "word_index = tokenizer.word_index\n",
+    "train_sequences = tokenizer.texts_to_sequences(X_seqTrain)\n",
+    "test_sequences = tokenizer.texts_to_sequences(X_seqTest)\n",
+    "\n",
+    "print(X_seqTrain[0])\n",
+    "print(train_sequences[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((7769, 827), (3019, 827))"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Pad the sequences to have the same length (Max number of words in a sequence)\n",
+    "max_doc_length = 0\n",
+    "for doc in train_sequences:\n",
+    "    if len(doc) > max_doc_length:\n",
+    "        max_doc_length = len(doc)\n",
+    "        \n",
+    "max_length = max_doc_length\n",
+    "\n",
+    "train_padded = pad_sequences(train_sequences, maxlen = max_length, padding = \"post\", truncating = \"post\")\n",
+    "test_padded = pad_sequences(test_sequences, maxlen = max_length, padding = \"post\", truncating = \"post\")\n",
+    "train_padded.shape, test_padded.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## (CAUTION: DO NOT OVERWRITE EXISTING FILES) -- Write the training and test data to a .npz file\n",
+    "outfile = \"seq_trainTest_data.npz\"\n",
+    "#np.savez_compressed(outfile, train_padded = train_padded, \n",
+    "#                             test_padded = test_padded, \n",
+    "#                             Y_train = Y_tfidfTrain, \n",
+    "#                             Y_test = Y_tfidfTest)"
    ]
   }
  ],
