updated 'Library Dependencies' in preamble

--- a/Text_Preprocessing.ipynb
+++ b/Text_Preprocessing.ipynb
@@ -13,7 +13,8 @@
     "#\n",
     "# Author(s): Bobby (Robert) Lumpkin\n",
     "#\n",
-    "# Library Dependencies: numpy, pandas, tensorflow, bpmll\n",
+    "# Library Dependencies: numpy, pandas, tensorflow, bpmll, scipy, random, os, re, string, json, collections, \n",
+    "#                       sklearn, nltk, \n",
     "#\n",
     "# NOTES: (1) A lot of the data cleaning performed here is due to a great tutorial written by Patrick Loeber\n",
     "#        which can be found at: https://github.com/python-engineer/tensorflow-course/blob/master/11_NLP.ipynb\n",
@@ -48,10 +49,10 @@
     "import sklearn_json as skljson\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MultiLabelBinarizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from nltk.corpus import reuters    ## This downloads the reduced Reuters-21578 dataset\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences"
    ]
