--- a/Text_Preprocessing.ipynb
+++ b/Text_Preprocessing.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,6 +552,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## (CAUTION: DO NOT OVERWRITE EXISTING FILES) -- Save the label list\n",
+    "label_list = list(reutersDF.columns[3:])\n",
+    "label_list_dict = {'label_list' : label_list}\n",
+    "#with open(\"Data/label_list.json\", \"w\") as outfile: \n",
+    "#    json.dump(label_list, outfile)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -594,16 +607,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "## (CAUTION: DO NOT OVERWRITE EXISTING FILES) -- Write the training and test data to a .npz file\n",
-    "outfile = \"tfidf_trainTest_data.npz\"\n",
+    "outfile = \"Data/tfidf_trainTest_data.npz\"\n",
     "#np.savez_compressed(outfile, X_tfidfTrain = X_tfidfTrain, \n",
-    "#                  X_tfidfTest = X_tfidfTest, \n",
-    "#                  Y_tfidfTrain = Y_tfidfTrain, \n",
-    "#                  Y_tfidfTest = Y_tfidfTest)"
+    "#                             X_tfidfTest = X_tfidfTest, \n",
+    "#                             Y_tfidfTrain = Y_tfidfTrain, \n",
+    "#                             Y_tfidfTest = Y_tfidfTest,\n",
+    "#                             feature_names = feature_names)\n",
+    "#feature_names"
    ]
   },
   {
@@ -719,12 +734,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "## (CAUTION: DO NOT OVERWRITE EXISTING FILES) -- Write the training and test data to a .npz file\n",
-    "outfile = \"seq_trainTest_data.npz\"\n",
+    "outfile = \"Data/seq_trainTest_data.npz\"\n",
     "#np.savez_compressed(outfile, train_padded = train_padded, \n",
     "#                             test_padded = test_padded, \n",
     "#                             Y_train = Y_tfidfTrain, \n",
