added absolute mean difference to PCA section

--- a/tfidf_Dimension_Reduction.ipynb
+++ b/tfidf_Dimension_Reduction.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "Text(0, 0.5, 'Frequency')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -227,8 +227,8 @@
     }
    ],
    "source": [
-    "## For each label, check the differences in the means for scores corresponding to 1-instances and scores corresponding to 0-instances\n",
-    "## Retain only PCs that sufficiently allow for separation of labels\n",
+    "## For each label, check the absolute differences in the means for scores corresponding to 1-instances and scores \n",
+    "## corresponding to 0-instances. Retain only PCs that sufficiently allow for separation of labels\n",
     "\n",
     "# New dataframe storing the rows as the principal components and columns as the labels with values \n",
     "# indicating the difference between the positive and negative means.\n",
