completed PCA section

--- a/tfidf_Dimension_Reduction.ipynb
+++ b/tfidf_Dimension_Reduction.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,13 +49,12 @@
    "source": [
     "## Linear Representations (Principal Components Analysis)\n",
     "\n",
-    "There are multiple approaches we could take towards determining the number of appropriate principal components to retain. One approach requires a certain proportion of explained variance. Another, sets a maximum acceptable dimension for dimension reduction purposes. \n",
-    "Another yet, involves treating the number of PCs as a hyperparameter and choosing a value via grid search. Since we plan to train multiple different models, we'll only try use the first two approaches throughout this project, for the sake of brevity."
+    "There are multiple approaches we could take towards determining the number of and which principal components to retain. We'll start by restricting consideration to the first PCs to cumulatively explain $80\\%$ of the variance. Then, among these PCs, we'll look for those that most lend themselves towards separating labels by considering the maximum (over labels) of the differences in mean scores between instances having a label and instances not. Then, we'll reduce our dataset to these selected PCs and save for future use."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,19 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "## If files exist, load pre-fit and transformed PCA object and scores\n",
     "pca = load(\"PCA_Model/PCA_fit.joblib\")\n",
-    "npzfile = np.load(\"Data/PC_scores_full.npz\")\n",
+    "npzfile = np.load(\"Data/tfidf_PC_scores_full.npz\")\n",
     "X_pcaTrain = npzfile['X_pcaTrain']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +152,6 @@
     "cum_var = np.cumsum(pca.explained_variance_ratio_) #cumulative variance.\n",
     "target_cum_var = 0.8    # Target cumulative variance.\n",
     "PCs_retained = np.where(cum_var>target_cum_var)[0][0] + 1    # Number of principal components retained to explain target\n",
-    "#max_numPCs = 50    # Maximum number of PCs to be considered\n",
     "\n",
     "ax2 = fig.add_subplot(122)\n",
     "ax2.plot(PC_id, cum_var, 'ro-', linewidth=2)\n",
@@ -162,17 +160,12 @@
     "ax2.set_xlim()\n",
     "ax2.set_ylim()\n",
     "ax2.hlines(target_cum_var, ax2.get_xlim()[0], ax2.get_xlim()[1], linestyles = \"--\", colors = plt.cm.Greys(200))\n",
-    "#ax2.hlines(cum_var[max_numPCs - 1], ax2.get_xlim()[0], ax2.get_xlim()[1], linestyles = \"--\", colors = plt.cm.Greens(200))\n",
     "ax2.vlines(PCs_retained, ax2.get_ylim()[0], ax2.get_ylim()[1], linestyles = \"--\", colors = plt.cm.Greys(200))\n",
-    "#ax2.vlines(max_numPCs, ax2.get_ylim()[0], ax2.get_ylim()[1], linestyles = \"--\", colors = plt.cm.Greens(200))\n",
     "ax2.plot(PCs_retained, target_cum_var, color = 'dimgrey', marker = '*', markersize = 30)\n",
-    "#ax2.plot(max_numPCs, cum_var[max_numPCs - 1], 'g*', markersize = 30)\n",
     "ax2.set_title(\"Cumulative Variance Explained\", size = 20)\n",
     "\n",
     "print(f\"Target cumulative variance: {target_cum_var: .2f}\")\n",
     "print(f\"Number of principal components: {PCs_retained}\")\n",
-    "#print(f\"Maximum number of permissible PCs: {max_numPCs}\")\n",
-    "#print(f\"Cumulative variance using {max_numPCs} PCs: {cum_var[max_numPCs - 1]: .2f}\")\n",
     "\n",
     "PC_list = [f\"PC-{comp}\" for comp in np.arange(1, PCs_retained+1)]\n",
     "PC_scores_cumVar = X_pcaTrain[:, 0 : PCs_retained]"
@@ -180,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +202,7 @@
        "Text(0, 0.5, 'Frequency')"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -276,7 +269,7 @@
     "                           'Y_test' : Y_test.tolist(),\n",
     "                           'separable_PC_list' : separable_PC_list.tolist()}\n",
     "\n",
-    "#with open(\"Data/PC_separable\", 'w') as outfile:\n",
+    "#with open(\"Data/tfidf_PC_separable\", 'w') as outfile:\n",
     "#    outfile.write(json.dumps(Separable_PCs_data_dict))"
    ]
   },
