Completed PCA section

--- a/tfidf_Dimension_Reduction.ipynb
+++ b/tfidf_Dimension_Reduction.ipynb
@@ -269,7 +269,7 @@
     "                           'Y_test' : Y_test.tolist(),\n",
     "                           'separable_PC_list' : separable_PC_list.tolist()}\n",
     "\n",
-    "#with open(\"Data/tfidf_PC_separable\", 'w') as outfile:\n",
+    "#with open(\"Data/tfidf_PC_separable.json\", 'w') as outfile:\n",
     "#    outfile.write(json.dumps(Separable_PCs_data_dict))"
    ]
   },
