--- a/Binary_Relevance_Classification.ipynb
+++ b/Binary_Relevance_Classification.ipynb
@@ -12,7 +12,7 @@
     "# Purpose: Multi-label Text-categorization via binary relevance, using k-nearest neighbors, gradient boosted trees, \n",
     "#          and support vector machines.\n",
     "\n",
-    "# Author(s): Bobby (Robert) Lumpkin\n",
+    "# Author(s): Bobby (Robert) Lumpkin, Archit Datar (PCA)\n",
     "#\n",
     "# Library Dependencies: numpy, pandas, scikit-learn\n",
     "########################################################################################################################"
@@ -24,6 +24,35 @@
    "source": [
     "# Multilabel Classification Using Binary Relevance Models"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np \n",
+    "import scipy\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "from skmultilearn.adapt import MLkNN\n",
+    "from skmultilearn.problem_transform import BinaryRelevance\n",
+    "from sklearn.neighbors import KNeighborsClassifier as kNN\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import metrics\n",
+    "import sys\n",
+    "sys.path.append('../ThresholdFunctionLearning')    ## Append path to the ThresholdFunctionLearning directory to the interpreters\n",
+    "                                                   ## search path\n",
+    "from threshold_learning import predict_test_labels_binary    ## Import the 'predict_test_labels_binary()' function from the "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
