--- a/tfidf_Dimension_Reduction.ipynb
+++ b/tfidf_Dimension_Reduction.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,14 +263,13 @@
     "Y_train = df_train_labels[label_list].values\n",
     "X_sepPCs_test = df_test_features[separable_PC_list].values\n",
     "Y_test = df_test_labels[label_list].values\n",
-    "Separable_PCs_data_dict = {'X_sepPCs_train' : X_sepPCs_train.tolist(),\n",
-    "                           'Y_train' : Y_train.tolist(),\n",
-    "                           'X_sepPCs_test' : X_sepPCs_test.tolist(),\n",
-    "                           'Y_test' : Y_test.tolist(),\n",
-    "                           'separable_PC_list' : separable_PC_list.tolist()}\n",
     "\n",
-    "#with open(\"Data/tfidf_PC_separable.json\", 'w') as outfile:\n",
-    "#    outfile.write(json.dumps(Separable_PCs_data_dict))"
+    "outfile = \"Data/tfidf_PC_separable.npz\"\n",
+    "#np.savez_compressed(outfile, X_sepPCs_train = X_sepPCs_train, \n",
+    "#                             X_sepPCs_test = X_sepPCs_test, \n",
+    "#                             Y_train = Y_train, \n",
+    "#                             Y_test = Y_test,\n",
+    "#                             separable_PC_list = separable_PC_list)\n"
    ]
   },
   {
