ANN rough draft

--- a/tfidf_Dimension_Reduction.ipynb
+++ b/tfidf_Dimension_Reduction.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,18 +89,20 @@
    "source": [
     "## (CAUTION: DO NOT OVERWRITE EXISTING FILES) -- Fit a PCA object to the training data & save the array of scores \n",
     "##                                               for the full set of PCs and the PCA object\n",
+    "\n",
     "pca = PCA(n_components = min(X_tfidfTrain.shape[0], X_tfidfTrain.shape[1]))\n",
-    "X_pcaTrain = pca.fit_transform(X_tfidfTrain)\n",
+    "X_pcaTrain = pca.fit_transform(X_tfidfTrain)    ## This may take some time to run\n",
     "#outfile = \"Data/PC_scores_full\"\n",
     "#np.savez_compressed(outfile, X_pcaTrain = X_pcaTrain)\n",
     "\n",
     "# Save the PCA fit\n",
-    "#dump(pca, 'PCA_Model/PCA_fit.joblib', compress = 3) "
+    "#dump(pca, 'PCA_Model/PCA_fit.joblib', compress = 3) \n",
+    "#dump(pca, 'PCA_Model/PCA_fit.pkl.lzma', compress = 9)    ## save a compressed version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +204,7 @@
        "Text(0, 0.5, 'Frequency')"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -232,8 +234,9 @@
     "df_diff[\"mod_max_diff\"] = np.abs(df_diff[label_list]).max(axis = 1)\n",
     "\n",
     "target_difference_cutoff = 0.1 \n",
+    "num_sepPCs = df_diff[df_diff['mod_max_diff'] >= target_difference_cutoff].shape[0]\n",
     "print(\"Number of principal components with max absolute difference (between 1 and 0 label means) above cutoff \" + \n",
-    "      f\"{target_difference_cutoff} : {df_diff[df_diff['mod_max_diff'] >= target_difference_cutoff].shape[0]}\")\n",
+    "      f\"{target_difference_cutoff} : {num_sepPCs}\")\n",
     "\n",
     "separable_PC_list = df_diff.loc[df_diff['mod_max_diff'] >= target_difference_cutoff].index.values\n",
     "\n",
@@ -254,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,10 +284,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "latent_dim = num_sepPCs\n",
+    "visible_dim = feature_names.shape[0]\n",
+    "\n",
+    "class Autoencoder(Model):\n",
+    "    def __init__(self, latent_dim, visible_dim):\n",
+    "        super(Autoencoder, self).__init__()\n",
+    "        self.latent_dim = latent_dim   \n",
+    "        self.encoder = tf.keras.Sequential([\n",
+    "            tf.keras.layers.Dense(latent_dim * 2, activation = 'tanh'),\n",
+    "            tf.keras.layers.Dense(latent_dim, activation = 'relu'),\n",
+    "        ])\n",
+    "        self.decoder = tf.keras.Sequential([\n",
+    "            tf.keras.layers.Dense(latent_dim * 2, activation = 'sigmoid'),\n",
+    "            tf.keras.layers.Dense(visible_dim, activation = 'relu'),\n",
+    "        ])\n",
+    "\n",
+    "    def call(self, x):\n",
+    "        encoded = self.encoder(x)\n",
+    "        decoded = self.decoder(encoded)\n",
+    "        return decoded\n",
+    "\n",
+    "autoencoder = Autoencoder(latent_dim, visible_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autoencoder.compile(optimizer = 'adam', loss = tf.keras.losses.MeanSquaredError())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "243/243 [==============================] - 20s 77ms/step - loss: 3.5516e-05 - val_loss: 1.9507e-05\n",
+      "Epoch 2/10\n",
+      "243/243 [==============================] - 11s 47ms/step - loss: 1.9504e-05 - val_loss: 1.9523e-05\n",
+      "Epoch 3/10\n",
+      "243/243 [==============================] - 11s 46ms/step - loss: 1.9521e-05 - val_loss: 1.9536e-05\n",
+      "Epoch 4/10\n",
+      "243/243 [==============================] - 12s 50ms/step - loss: 1.9525e-05 - val_loss: 1.9534e-05\n",
+      "Epoch 5/10\n",
+      "243/243 [==============================] - 13s 53ms/step - loss: 1.9531e-05 - val_loss: 1.9547e-05\n",
+      "Epoch 6/10\n",
+      "243/243 [==============================] - 12s 48ms/step - loss: 1.9536e-05 - val_loss: 1.9536e-05\n",
+      "Epoch 7/10\n",
+      "243/243 [==============================] - 12s 47ms/step - loss: 1.9535e-05 - val_loss: 1.9537e-05\n",
+      "Epoch 8/10\n",
+      "243/243 [==============================] - 11s 46ms/step - loss: 1.9537e-05 - val_loss: 1.9533e-05\n",
+      "Epoch 9/10\n",
+      "243/243 [==============================] - 11s 46ms/step - loss: 1.9534e-05 - val_loss: 1.9534e-05\n",
+      "Epoch 10/10\n",
+      "243/243 [==============================] - 11s 45ms/step - loss: 1.9537e-05 - val_loss: 1.9532e-05\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x1b5048796a0>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.random.set_seed(123)\n",
+    "autoencoder.fit(X_tfidfTrain, X_tfidfTrain,\n",
+    "                epochs = 10,\n",
+    "                shuffle = True,\n",
+    "                validation_data = (X_tfidfTest, X_tfidfTest))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## (CAUTION: DO NOT OVERWRITE EXISTING FILES) -- Get and save encodings for the training/test data \n",
+    "encoded_train = autoencoder.encoder(X_tfidfTrain).numpy()\n",
+    "encoded_test = autoencoder.encoder(X_tfidfTest).numpy()\n",
+    "\n",
+    "outfile = \"Data/tfidf_encoded_data.npz\"\n",
+    "#np.savez_compressed(outfile, encoded_train = encoded_train,\n",
+    "#                    encoded_test = encoded_test,\n",
+    "#                    Y_train = Y_tfidfTrain,\n",
+    "#                    Y_test = Y_tfidfTest)"
+   ]
   }
  ],
  "metadata": {
